Disable using Java configuration to configure MongoDB, use .getInputStream() method to read strings from files such as public/private keys from now on